add google auth

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -1,4 +1,5 @@
 {% load render_bundle from webpack_loader %}
 <div id="app">
 </div>
+<a class="lead" href="{% url 'login' %}">Log in</a>
 {% render_bundle 'main' %}
